fixed overflow issue on home page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,17 +33,17 @@
   padding-bottom: 2.5rem;    /* Footer height */
 }
 
-.footer-basic {
-  // position: absolute;
-  // bottom: 0;
-  width: 100%;
-  padding-top: 10px;
-  padding-bottom: 0px;
-  flex-shrink: 0;
-  // background-color:#ffffff;
-  color:#4b4c4d;
-  height: 40px;
-  display: block;
-  // margin-top: 0px;
-}
+// .footer-basic {
+//   // position: absolute;
+//   // bottom: 0;
+//   width: 100%;
+//   padding-top: 10px;
+//   padding-bottom: 0px;
+//   flex-shrink: 0;
+//   // background-color:#ffffff;
+//   color:#4b4c4d;
+//   height: 40px;
+//   display: block;
+//   // margin-top: 0px;
+// }
 
