--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -6,11 +6,11 @@
   padding-bottom: 0px;
   flex-shrink: 0;
   color:#4b4c4d;
-  height: 40px;
   display: block;
   margin-top: 0px;
   position: absolute;
-  width: 100vh;
+  width: 100vw;
+  background: white;
 }
 
 .footer-basic .social {
