--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -106,6 +106,8 @@ label[for="activity_category_broke-ass"] {
 .banner-question-date {
   height: 100vh;
   position: relative;
+  overflow: hidden;
+
   #banner-question-date-header {
     margin-bottom: 3vh;
     color: #495057;
